@@ -1,3 +1,12 @@
+Fri Aug  9 08:28:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_3769_Regression/Foo.idl:
+        * tests/Bug_3769_Regression/Foo_exec.h:
+        * tests/Bug_3769_Regression/Foo_exec.cpp:
+        * tests/Bug_3769_Regression/descriptors/DeploymentPlan.cdp:
+          Further extensions, test whether the default value of all
+          numeric fields works when they just use <value/> in the cdp
+
 Wed Aug  7 09:340:27 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         *  connectors/dds4ccm/examples/ShapesContr/descriptors/USER_QOS_PROFILES.xml:
@@ -47,9 +56,9 @@ Mon Aug  5 10:20:27 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
         *  connectors/dds4ccm/examples/ShapesContr/Receiver/Shapes_Receiver_exec.cpp:
         *  connectors/dds4ccm/examples/ShapesContr/Receiver/Shapes_Receiver.idl:
         *  connectors/dds4ccm/examples/ShapesContr/README:
-        Test where a controller componet starts and stops publishing of shapes and an 
-        other controller component aggregates the received samples and makes them available for the outside world. 
-      
+        Test where a controller componet starts and stops publishing of shapes and an
+        other controller component aggregates the received samples and makes them available for the outside world.
+
 Mon Aug  5 06:13:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_3769_Regression/Foo_exec.cpp:
